@@ -1,5 +1,6 @@
 plugins {
     id 'org.inferred.processors' version '1.2.3'
+    id 'com.palantir.docker' version '0.9.1'
 }
 apply plugin: 'java'
 apply plugin: 'application'
@@ -7,6 +8,7 @@ apply plugin: 'idea'
 
 dependencies {
   compile project(':weyl-core')
+  compile project(':weyl-frontend')
   compile 'io.dropwizard:dropwizard-core:' + dropwizardVersion
   compile 'io.dropwizard:dropwizard-jdbi:' + dropwizardVersion
   compile 'io.dropwizard:dropwizard-assets:' + dropwizardVersion
@@ -22,11 +24,17 @@ dependencies {
 }
 
 mainClassName = 'io.quartic.weyl.WeylApplication'
-
+applicationDefaultJvmArgs = ["-Xms8g", "-Xmx8g", '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-Xloggc:mygclogfilename.gc']
 
 ext.memorySetting = (project.hasProperty('memory') ? project.memory : '8g')
 
 run {
   args = ['server', 'weyl.yml']
   jvmArgs = ["-Xms${memorySetting}", "-Xmx${memorySetting}", '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-Xloggc:mygclogfilename.gc']
+}
+
+docker {
+  name      "registry.gitlab.com/quartic/${rootProject.name}"
+  dependsOn distTar
+  files     "build.gradle"    // Seems to be no way to say "no files", so using this as dummy
 }
